@@ -1,5 +1,5 @@
   1.3 STATUS:
-  Last modified at [$Date: 1999/07/28 14:06:20 $]
+  Last modified at [$Date: 1999/07/28 17:37:05 $]
 
 Release:
 
@@ -67,13 +67,6 @@ Binaries (1.3.6):
 
 RELEASE SHOWSTOPPERS:
 
-    * The Vary header field stuff is still broken (multiple
-      entries occur, etc.).  The result is that some browsers (AFAIK at least
-      MSIE) are horribly confused by the responses.
-      Status: It should be fixed before 1.3.7 went out. For details
-              how it should be done, please look at new-httpd mailing list
-              archive: Ken, Ralf and Roy have already found consensus in the
-              past there.
 
 RELEASE NON-SHOWSTOPPERS BUT WOULD BE REAL NICE TO WRAP THESE UP:
 
