@@ -1,5 +1,12 @@
 Changes with Apache 1.3.7
 
+  *) Sanitise "Vary" values by not adding duplicate keywords.  A
+     separate routine needs to be used to do this, so any module
+     that frobs "Vary" needs to be changed.  The standard modules
+     have all been modified.  This solution is somewhat inelegant,
+     but it does the job for now.  PR#4118 (better fix than before)
+     [Ken Coar, Roy Fielding]
+
   *) Link DSO's with "gcc -shared" instead of "ld -Bshareable" at 
      least on Linux and FreeBSD for now.  
      [Rasmus Lerdorf]
